fix color contrast

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -414,7 +414,7 @@ main {
 .hero h1 {
     font-size: 2.5rem;
     font-weight: 900;
-    color: #ffffff;
+    color: var(--bg-color);
     background-color: var(--color-dark);
     border-radius: 0;
     width: auto;
@@ -422,8 +422,8 @@ main {
     text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.7);
 }
 .hero p {
-    font-size: 1.3rem;
-    color: #ffffff;
+    font-size: 1.5rem;
+    color: var(--bg-color);
     font-weight: 600;
     text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.7);
 }
